--- a/test.html
+++ b/test.html
@@ -9,9 +9,9 @@
   <header class="site-header">
     <div class="container">
       <div class="logo">
-        <span aria-hidden="true" class="logo-icon">YO</span>
+        <img aria-hidden="true" class="logo-icon" src="assets/images/hand-holding-heart-solid.svg" alt="logo"></img>
         <div class="site-name">
-          <span class="site-title">Mon Petit</span><br />
+          <span class="site-title">Mon Petit</span>
           <span class="site-subtitle">Geste</span>
         </div>
       </div>
