feat: integer new architecture

--- a/src/html/playground.html
+++ b/src/html/playground.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Test Header</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Playground</title>
 </head>
 <body>
   <header class="site-header">
     <div class="container">
       <div class="logo">
-        <img aria-hidden="true" class="logo-icon" src="assets/images/hand-holding-heart-solid.svg" alt="logo"></img>
+        <img class="logo-icon" src="../assets/svg/hand-holding-heart-solid.svg" alt="logo"></img>
         <div class="site-name">
           <span class="site-title">Mon Petit</span>
           <span class="site-subtitle">Geste</span>
@@ -25,6 +25,11 @@
       </nav>
     </div>
   </header>
-  
+
+  <main>
+    <h1>Bienvenue sur le pleyground</h1>
+    <p>Page pour tester des composants si besoin</p>
+  </main>
+
 </body>
 </html>
