--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,13 +9,8 @@
   <header>
     <nav>
       <ul>
-        <li><a href="./index.html">
-          <img src="../assets/svg/house.svg">
-          <img src="../assets/images/house.png">
-        
-        </a></li>
-        <li><a href="./about.html">À propos</a></li>
-        <li><a href="./articles/article1.html">Article 1</a></li>
+        <li><a href="./index.html">Index</a></li>
+        <li><a href="./playground.html">Playground</a></li>
       </ul>
     </nav>
   </header>
