fix css at footer

--- a/src/html/playground.html
+++ b/src/html/playground.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Playground</title>
+  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
   <header class="site-header">
@@ -27,9 +29,30 @@
   </header>
 
   <main>
-    <h1>Bienvenue sur le pleyground</h1>
+    <h1>Bienvenue sur le playground</h1>
     <p>Page pour tester des composants si besoin</p>
   </main>
+  <footer>
 
+    <div class="footer-logo">
+        <div class="logo-container">
+            <img aria-hidden="true" class="logo-icon" src="../assets/svg/hand-holding-heart-solid.svg" alt="logo"></img>
+            <div class="site-name">
+                <span class="site-title">Mon Petit</span>
+                <span class="site-subtitle">Geste</span>
+            </div>
+        </div>
+        <p>2025 © Kyongsong</p>          
+    </div>
+
+    <ul class="footer-lien" role="navigation" aria-label="pied de page">
+        <li><a href="#">Le matin</a></li>
+        <li><a href="#">L'après midi</a></li>
+        <li><a href="#">Le soir</a></li>
+        <li><a href="#">Nous contacter</a></li>
+        <li><a href="#">Mentions légals</a></li>
+    </ul>
+
+</footer>
 </body>
 </html>
