--- a/src/html/playground.html
+++ b/src/html/playground.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body>
   <header class="site-header">
     <div class="container">
@@ -29,11 +30,20 @@
   </header>
 
   <main>
-    <h1>Bienvenue sur le playground</h1>
-    <p>Page pour tester des composants si besoin</p>
+    <div class="description_card_border">
+      <div>
+        <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M79.2033 62.4849L65.4219 57.0473C64.8331 56.8163 64.1788 56.7676 63.5574 56.9086C62.9361 57.0495 62.3812 57.3725 61.9765 57.8289L55.8733 64.6939C46.2948 60.5362 38.5863 53.4395 34.0702 44.6212L41.527 39.0024C42.0237 38.6304 42.3753 38.1196 42.5285 37.5473C42.6817 36.975 42.6281 36.3723 42.376 35.8304L36.4697 23.1427C36.1929 22.5586 35.7035 22.0818 35.0858 21.7943C34.4681 21.5068 33.7607 21.4268 33.0858 21.5681L20.2887 24.2869C19.638 24.4252 19.0574 24.7625 18.6417 25.2438C18.2261 25.725 17.9999 26.3217 18 26.9366C18 55.9937 43.5819 79.5 75.0947 79.5C75.7628 79.5004 76.4113 79.2922 76.9342 78.9095C77.4572 78.5268 77.8238 77.9922 77.9741 77.3929L80.9273 65.6115C81.0797 64.9871 80.9909 64.3333 80.6763 63.7626C80.3616 63.192 79.8408 62.7401 79.2033 62.4849Z" fill="#005A9C"/>
+        </svg>
+      </div>
+      <div class="description_card_content">
+          <h1>Se laver</h1>
+          <p>se laver avec de l'eau et du savon est important, pensez à frotter</p>
+      </div>    
+    </div>
   </main>
+  
   <footer>
-
     <div class="footer-logo">
         <div class="logo-container">
             <img aria-hidden="true" class="logo-icon" src="../assets/svg/hand-holding-heart-solid.svg" alt="logo"></img>
@@ -44,7 +54,6 @@
         </div>
         <p>2025 © Kyongsong</p>          
     </div>
-
     <ul class="footer-lien" role="navigation" aria-label="pied de page">
         <li><a href="#">Le matin</a></li>
         <li><a href="#">L'après midi</a></li>
@@ -52,7 +61,6 @@
         <li><a href="#">Nous contacter</a></li>
         <li><a href="#">Mentions légals</a></li>
     </ul>
-
-</footer>
+  </footer>
 </body>
 </html>
