--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,24 +1,74 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accueil</title>
+  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Index</a></li>
-        <li><a href="./playground.html">Playground</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="container">
+      <div class="logo">
+        <img class="logo-icon" src="../assets/svg/hand-holding-heart-solid.svg" alt="logo"></img>
+        <div class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <span class="site-subtitle">Geste</span>
+        </div>
+      </div>
+
+      <nav class="nav" aria-label="Navigation principale">
+        <ul>
+          <li><a href="#matin">Le matin</a></li>
+          <li><a href="#apres-midi">L'après-midi</a></li>
+          <li><a href="#soir">Le soir</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <h1>Bienvenue sur notre site</h1>
-    <p>Page d'accueil de notre projet multi-pages.</p>
+    <h1>Les gestes du quotidien</h1>
+    <h2>Se sentir bien dans un corps et un esprit sain</h2>
+    <section class="cards">
+      <article class="card">
+        <a href="lematin.html">Le matin</a>
+      </article>
+      <article class="card">
+        <a href="laprem.html">L'apres-midi</a>
+      </article>
+      <article class="card">
+        <a href="lesoir.html">Le soir</a>
+      </article>
+    </section>
   </main>
 
 </body>
+<footer>
+
+  <div class="footer-logo">
+    <div class="logo-container">
+      <img aria-hidden="true" class="logo-icon" src="../assets/svg/hand-holding-heart-solid.svg" alt="logo"></img>
+      <div class="site-name">
+        <span class="site-title">Mon Petit</span>
+        <span class="site-subtitle">Geste</span>
+      </div>
+    </div>
+    <p>2025 © Kyongsong</p>
+  </div>
+
+  <ul class="footer-lien" role="navigation" aria-label="pied de page">
+    <li><a href="#">Le matin</a></li>
+    <li><a href="#">L'après midi</a></li>
+    <li><a href="#">Le soir</a></li>
+    <li><a href="#">Nous contacter</a></li>
+    <li><a href="#">Mentions légals</a></li>
+  </ul>
+
+</footer>
+</body>
+
 </html>
