--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <main>
-    <h1>Bienvenue sur notre site test</h1>
+    <h1>Bienvenue sur notre site</h1>
     <p>Page d'accueil de notre projet multi-pages.</p>
   </main>
 
