--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,7 +38,7 @@
         <a href="lematin.html">Le matin</a>
       </article>
       <article class="card">
-        <a href="laprem.html">L'apres-midi</a>
+        <a href="laprem.html">L'après-midi</a>
       </article>
       <article class="card">
         <a href="lesoir.html">Le soir</a>
