--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,8 @@
       <ul>
         <li><a href="./index.html">Index</a></li>
         <li><a href="./playground.html">Playground</a></li>
+        <li><a href="./matin.html">Playground</a></li>
+
       </ul>
     </nav>
   </header>
