--- a/src/html/matin.html
+++ b/src/html/matin.html
@@ -29,9 +29,9 @@
         </a>
         <nav class="nav" aria-label="Navigation principale">
           <ul>
-            <li><a href="/matin.html">Le matin</a></li>
-            <li><a href="/apres-midi.html">L'après-midi</a></li>
-            <li><a href="/soir.html">Le soir</a></li>
+            <li><a href="./matin.html">Le matin</a></li>
+            <li><a href="./apres-midi.html">L'après-midi</a></li>
+            <li><a href="./soir.html">Le soir</a></li>
           </ul>
         </nav>
       </div>
