--- a/src/html/soir.html
+++ b/src/html/soir.html
@@ -29,9 +29,9 @@
         </a>
         <nav class="nav" aria-label="Navigation principale">
           <ul>
-            <li><a href="/matin.html">Le matin</a></li>
-            <li><a href="/apres-midi.html">L'après-midi</a></li>
-            <li><a href="/soir.html">Le soir</a></li>
+            <li><a href="./matin.html">Le matin</a></li>
+            <li><a href="./apres-midi.html">L'après-midi</a></li>
+            <li><a href="./soir.html">Le soir</a></li>
           </ul>
         </nav>
       </div>
@@ -302,7 +302,7 @@
 
     <footer>
       <div class="footer-logo">
-        <a href="/index.html" class="logo-container">
+        <a href="./index.html" class="logo-container">
           <img
             aria-hidden="true"
             class="logo-icon"
