fix css; add favicon; rm unused

--- a/src/html/soir.html
+++ b/src/html/soir.html
@@ -6,6 +6,7 @@
     <title>Le soir | Mon petit geste</title>
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="icon" href="../assets/svg/favicon.svg" type="image/svg+xml" />
   </head>
 
   <body>
@@ -28,9 +29,9 @@
         </a>
         <nav class="nav" aria-label="Navigation principale">
           <ul>
-            <li><a href="#matin">Le matin</a></li>
-            <li><a href="#apres-midi">L'après-midi</a></li>
-            <li><a href="#soir">Le soir</a></li>
+            <li><a href="/matin.html">Le matin</a></li>
+            <li><a href="/apres-midi.html">L'après-midi</a></li>
+            <li><a href="/soir.html">Le soir</a></li>
           </ul>
         </nav>
       </div>
