--- a/src/html/index.html
+++ b/src/html/index.html
@@ -149,7 +149,7 @@
 
     <footer>
       <div class="footer-logo">
-        <div class="logo-container">
+        <a href="./index.html" class="logo-container">
           <img
             aria-hidden="true"
             class="logo-icon"
@@ -160,14 +160,13 @@
             <span class="site-title">Mon Petit</span>
             <span class="site-subtitle">Geste</span>
           </div>
-        </div>
+        </a>
         <p>2025 © Kyongsong</p>
       </div>
-
       <ul class="footer-lien" role="navigation" aria-label="pied de page">
-        <li><a href="#">Le matin</a></li>
-        <li><a href="#">L'après midi</a></li>
-        <li><a href="#">Le soir</a></li>
+        <li><a href="./matin.html">Le matin</a></li>
+        <li><a href="./apres-midi.html">L'après midi</a></li>
+        <li><a href="./soir.html">Le soir</a></li>
         <li><a href="#">Nous contacter</a></li>
         <li><a href="#">Mentions légals</a></li>
       </ul>
