--- a/src/html/soir.html
+++ b/src/html/soir.html
@@ -14,7 +14,7 @@
       <div class="container">
         <a
           class="logo"
-          href="/index.html"
+          href="./index.html"
           aria-label="Page du soir Mon Petit Geste"
         >
           <img
@@ -317,9 +317,9 @@
         <p>2025 © Kyongsong</p>
       </div>
       <ul class="footer-lien" role="navigation" aria-label="pied de page">
-        <li><a href="#">Le matin</a></li>
-        <li><a href="#">L'après midi</a></li>
-        <li><a href="#">Le soir</a></li>
+        <li><a href="./matin.html">Le matin</a></li>
+        <li><a href="./apres-midi.html">L'après midi</a></li>
+        <li><a href="./soir.html">Le soir</a></li>
         <li><a href="#">Nous contacter</a></li>
         <li><a href="#">Mentions légals</a></li>
       </ul>
