--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Cette page est une aide pratique au quotidien des personnes âgées, un guide général avec accès au guide du matin, de l'aprèmidi et du soir."/>
+    <meta name="description" content="Cette page est une aide pratique au quotidien des personnes âgées, un guide général avec accès au guide du matin, de l'après-midi et du soir."/>
     <title>Accueil</title>
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/index.css" />
