matin page without div

--- a/src/html/apres-midi.html
+++ b/src/html/apres-midi.html
@@ -38,7 +38,6 @@
     <main class="principal">
       <section class="section-container" aria-labelledby="matin">
         <div class="section-content">
-          <div>
             <svg
               width="101"
               height="101"
@@ -100,7 +99,6 @@
                 stroke-linecap="round"
               />
             </svg>
-          </div>
           <h2 class="section-title" aria-label="Le rituel d'après-midi">
             L'après-midi
           </h2>
@@ -114,7 +112,6 @@
       <section class="section-actions">
         <h1>Occupation</h1>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -127,18 +124,16 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Appeler un proche</h2>
             <p>
               Entendre la voix d’un être cher fait toujours du bien. Prendre
               quelques minutes pour appeler un proche permet de garder le lien,
               de partager un moment chaleureux et de se sentir entouré.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -163,18 +158,16 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Lire ou faire un puzzle</h2>
             <p>
               Lire quelques pages ou s’amuser avec un puzzle, c’est bon pour
               l’esprit. Ces petites activités calmes aident à se détendre tout
               en faisant travailler la mémoire et la concentration.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -187,18 +180,16 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Écouter de la musique</h2>
             <p>
               Une jolie mélodie peut changer l’ambiance d’une journée. Écouter
               une chanson aimée apaise, réveille des souvenirs et apporte de la
               joie.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -211,21 +202,19 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Regarder des photos</h2>
             <p>
               Replonger dans ses souvenirs, c’est réconfortant. Feuilleter un
               album ou regarder de vieilles photos permet de revivre de bons
               moments et de se sentir proche de ses proches.
             </p>
-          </div>
+          </span>
         </article>
       </section>
       <section class="section-actions">
         <h1>Santé</h1>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -250,8 +239,7 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Boire de l'eau</h2>
             <p>
               Le corps a besoin d’eau pour bien fonctionner. Même si on n’a pas
@@ -259,10 +247,9 @@
               forme et à éviter les coups de fatigue, surtout en période de
               forte chaleur.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -275,8 +262,7 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Manger son déjeuner</h2>
             <p>
               Un bon repas aide à garder de l’énergie pour le reste de la
@@ -284,11 +270,10 @@
               possible dans une ambiance agréable, fait du bien au corps et au
               moral.
             </p>
-          </div>
+          </span>
         </article>
 
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -301,19 +286,17 @@
                 fill="#00519C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Prendre ses médicaments (si besoin)</h2>
             <p>
               Ne pas oublier ses traitements, c’est essentiel pour sa santé. Les
               prendre toujours à la même heure aide à ne pas les oublier. Une
               petite alarme peut aussi aider.
             </p>
-          </div>
+          </span>
         </article>
 
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -330,18 +313,16 @@
                 fill="#005C9A"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Aérer la pièce</h2>
             <p>
               Un peu d’air frais fait du bien. Ouvrir la fenêtre quelques
               minutes aide à mieux respirer et rend l’ambiance plus agréable.
             </p>
-          </div>
+          </span>
         </article>
 
         <article class="description_card_border">
-          <div>
             <svg
               width="101"
               height="101"
@@ -366,11 +347,10 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Faire de l'exercice</h2>
             <p>Bougez, remuez, dansez !</p>
-          </div>
+          </span>
         </article>
       </section>
     </main>
