--- a/src/html/matin.html
+++ b/src/html/matin.html
@@ -37,8 +37,7 @@
 
     <main class="principal">
       <section class="section-container" aria-labelledby="matin">
-        <div class="section-content">
-          <div>
+        <span class="section-content">
             <svg
               width="100"
               height="100"
@@ -51,7 +50,7 @@
                 fill="#FFFFFF"
               />
             </svg>
-          </div>
+
           <h2 class="section-title" aria-label="Le rituel du matin">
             Le matin
           </h2>
@@ -59,12 +58,11 @@
             La routine du matin, le rituel le plus important de la journée pour
             bien se préparer et commencer sa journée !
           </p>
-        </div>
+        </span>
       </section>
       <section class="section-actions">
         <h1>Hygiène</h1>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="103"
@@ -77,16 +75,14 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Se laver</h2>
             <p>
               Se laver avec de l'eau et du savon est important, pensez à frotter
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -111,17 +107,15 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Mettre des vêtements propres</h2>
             <p>
               Rien de mieux pour se sentir bien : les sous-vêtements puis les
               vêtements.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -154,17 +148,15 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Se brosser les dents</h2>
             <p>
               À l'aide du dentifrice qui sera déposé sur la brosse à dent,
               pensez à frotter de haut en bas puis rincez à l'eau claire.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -177,17 +169,15 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Se coiffer</h2>
             <p>À l'aide de sa brosse à cheveux, se coiffer !</p>
-          </div>
+          </span>
         </article>
       </section>
       <section class="section-actions">
         <h1>Santé</h1>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -212,14 +202,12 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Boire de l'eau</h2>
             <p>Bien s'hydrater et boir 1,5 litre d'eau</p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -232,16 +220,14 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Manger son petit déjeuner</h2>
             <p>
               Quelques tartines, un café ou thé pour bien commencer la journée.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="101"
               height="101"
@@ -266,11 +252,10 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h2>Faire de l'exercice</h2>
             <p>Bougez, remuez, dansez !</p>
-          </div>
+          </span>
         </article>
       </section>
     </main>
