apres-midi and soir pages without div

--- a/src/html/soir.html
+++ b/src/html/soir.html
@@ -37,8 +37,7 @@
 
     <main class="principal">
       <section class="section-container" aria-labelledby="soir">
-        <div class="section-content">
-          <div>
+        <span class="section-content">
             <svg
               width="100"
               height="100"
@@ -51,17 +50,15 @@
                 fill="#ffffff"
               />
             </svg>
-          </div>
           <h1 class="section-title" aria-label="Le rituel du soir">Le soir</h1>
           <p class="section-text">
             La routine du soir, pour bien recharger ses batteries !
           </p>
-        </div>
+        </span>
       </section>
       <section class="section-actions">
         <h2>Santé</h2>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -74,14 +71,12 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Se reposer</h1>
             <p>S'assoir sur le canapé, s'assoir sur son balcon ou terrasse.</p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -94,17 +89,15 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Dîner</h1>
             <p>
               Pensez à manger équilibré : légumes, fruits et poisson pour le
               soir.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -129,15 +122,13 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Boire de l'eau</h1>
             <p>Bien s'hydrater et boir 1,5 litre d'eau</p>
-          </div>
+          </span>
         </article>
 
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -170,20 +161,18 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Se brosser les dents</h1>
             <p>
               À l'aide du dentifrice qui sera déposé sur la brosse à dent,
               pensez à frotter de haut en bas puis rincez à l'eau claire.
             </p>
-          </div>
+          </span>
         </article>
       </section>
       <section class="section-actions">
         <h2>Avant de se coucher</h2>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -208,17 +197,15 @@
                 </clipPath>
               </defs>
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Vérouiller les portes et fenêtres</h1>
             <p>
               Pensez à vérifier que la clé et bien dans la porte et fermée à
               double tours, que les fenêtres sont aussi fermées.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -231,17 +218,15 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Éteindre les appareils électriques et le gaz</h1>
             <p>
               Pensez à éteindre les plaques de cuisson ou coupez le gaz si
               besoin.
             </p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -254,14 +239,12 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Allumer la veilleuse</h1>
             <p>Mettre une lumière tamisée pour se préparer au sommeil.</p>
-          </div>
+          </span>
         </article>
         <article class="description_card_border">
-          <div>
             <svg
               width="100"
               height="100"
@@ -286,14 +269,13 @@
                 fill="#005A9C"
               />
             </svg>
-          </div>
-          <div class="description_card_content">
+          <span class="description_card_content">
             <h1>Préparer un réveil</h1>
             <p>
               Pensez à programmer une sonnerie pour vous réveiller avant 9h, si
               nécessaire.
             </p>
-          </div>
+          </span>
         </article>
       </section>
     </main>
