--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,27 +12,25 @@
 
   <body>
     <header>
-      <span class="container">
-        <a href="./index.html"  class="logo">
-          <img
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
-        </a>
+      <a href="./index.html"  class="logo">
+        <img
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="logo"
+        />
+        <p class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
+        </p>
+      </a>
 
-        <nav class="nav" aria-label="Navigation principale">
-          <ul>
-            <li><a href="./matin.html">Le matin</a></li>
-            <li><a href="./apres-midi.html">L'après-midi</a></li>
-            <li><a href="./soir.html">Le soir</a></li>
-          </ul>
-        </nav>
-      </span>
+      <nav class="nav" aria-label="Navigation principale">
+        <ul>
+          <li><a href="./matin.html">Le matin</a></li>
+          <li><a href="./apres-midi.html">L'après-midi</a></li>
+          <li><a href="./soir.html">Le soir</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -143,23 +141,19 @@
     </main>
 
     <footer>
-      <span class="container">
-        <a href="./index.html" class="logo">
-          <img
-            aria-hidden="true"
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
+      <a href="./index.html" class="logo">
+        <img
+          aria-hidden="true"
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="logo"
+        />
+        <p class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
         </p>
-      </a> 
-      <p>2025 © Kyongsong</p>
-    </span>
-
+      </a>
+    
       <ul class="footer-lien" role="navigation" aria-label="pied de page">
         <li><a href="./matin.html">Le matin</a></li>
         <li><a href="./apres-midi.html">L'après midi</a></li>
@@ -167,6 +161,8 @@
         <li><a href="#">Nous contacter</a></li>
         <li><a href="#">Mentions légales</a></li>
       </ul>
+
+      <p>2025 © Kyongsong</p>
     </footer>
   </body>
 </html>
