--- a/src/html/apres-midi.html
+++ b/src/html/apres-midi.html
@@ -12,106 +12,101 @@
 
   <body>
     <header>
-      <span class="container">
-        <a href="./index.html"  class="logo">
-          <img
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
-        </a>
+      <a href="./index.html"  class="logo">
+        <img
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="logo"
+        />
+        <p class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
+        </p>
+      </a>
 
-        <nav class="nav" aria-label="Navigation principale">
-          <ul>
-            <li><a href="./matin.html">Le matin</a></li>
-            <li><a href="./apres-midi.html">L'après-midi</a></li>
-            <li><a href="./soir.html">Le soir</a></li>
-          </ul>
-        </nav>
-      </span>
+      <nav class="nav" aria-label="Navigation principale">
+        <ul>
+          <li><a href="./matin.html">Le matin</a></li>
+          <li><a href="./apres-midi.html">L'après-midi</a></li>
+          <li><a href="./soir.html">Le soir</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="principal">
       <section class="section-container" aria-labelledby="matin">
-        <div class="section-content">
-            <svg
-              width="101"
-              height="101"
-              viewBox="0 0 101 101"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M51 75.5C64.8071 75.5 76 64.3071 76 50.5C76 36.6929 64.8071 25.5 51 25.5C37.1929 25.5 26 36.6929 26 50.5C26 64.3071 37.1929 75.5 51 75.5Z"
-                stroke="#FFFFFF"
-                stroke-width="8"
-              />
-              <path
-                d="M51 8.83325V12.9999"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-              <path
-                d="M51 88V92.1667"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-              <path
-                d="M92.6667 50.5H88.5"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-              <path
-                d="M13.5 50.5H9.33331"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-              <path
-                d="M80.4617 21.0403L78.825 22.6771"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-              <path
-                d="M23.1741 78.3237L21.5372 79.9608"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-              <path
-                d="M80.4617 79.9597L78.825 78.323"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-              <path
-                d="M23.0339 22.5338L21.339 20.8389"
-                stroke="#FFFFFF"
-                stroke-width="8"
-                stroke-linecap="round"
-              />
-            </svg>
-          <h2 class="section-title" aria-label="Le rituel d'après-midi">
-            L'après-midi
-          </h2>
-          <p class="section-text">
-            L'après-midi est le bon moment pour bouger un peu, s’occuper
-            l’esprit ou faire une pause bien méritée. Voici quelques idées pour
-            rester en forme et bien dans sa tête.
-          </p>
-        </div>
+          <svg
+            width="101"
+            height="101"
+            viewBox="0 0 101 101"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M51 75.5C64.8071 75.5 76 64.3071 76 50.5C76 36.6929 64.8071 25.5 51 25.5C37.1929 25.5 26 36.6929 26 50.5C26 64.3071 37.1929 75.5 51 75.5Z"
+              stroke="#FFFFFF"
+              stroke-width="8"
+            />
+            <path
+              d="M51 8.83325V12.9999"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+            <path
+              d="M51 88V92.1667"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+            <path
+              d="M92.6667 50.5H88.5"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+            <path
+              d="M13.5 50.5H9.33331"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+            <path
+              d="M80.4617 21.0403L78.825 22.6771"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+            <path
+              d="M23.1741 78.3237L21.5372 79.9608"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+            <path
+              d="M80.4617 79.9597L78.825 78.323"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+            <path
+              d="M23.0339 22.5338L21.339 20.8389"
+              stroke="#FFFFFF"
+              stroke-width="8"
+              stroke-linecap="round"
+            />
+          </svg>
+        <h2 class="section-title" aria-label="Le rituel d'après-midi">
+          L'après-midi
+        </h2>
+        <p class="section-text">
+          L'après-midi est le bon moment pour bouger un peu, s’occuper
+          l’esprit ou faire une pause bien méritée. Voici quelques idées pour
+          rester en forme et bien dans sa tête.
+        </p>
       </section>
       <section class="section-actions">
         <h1>Occupation</h1>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -124,16 +119,14 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
             <h2>Appeler un proche</h2>
             <p>
               Entendre la voix d’un être cher fait toujours du bien. Prendre
               quelques minutes pour appeler un proche permet de garder le lien,
               de partager un moment chaleureux et de se sentir entouré.
             </p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -158,16 +151,14 @@
                 </clipPath>
               </defs>
             </svg>
-          <span class="description_card_content">
             <h2>Lire ou faire un puzzle</h2>
             <p>
               Lire quelques pages ou s’amuser avec un puzzle, c’est bon pour
               l’esprit. Ces petites activités calmes aident à se détendre tout
               en faisant travailler la mémoire et la concentration.
             </p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -180,16 +171,14 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
             <h2>Écouter de la musique</h2>
             <p>
               Une jolie mélodie peut changer l’ambiance d’une journée. Écouter
               une chanson aimée apaise, réveille des souvenirs et apporte de la
               joie.
             </p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -202,19 +191,17 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
             <h2>Regarder des photos</h2>
             <p>
               Replonger dans ses souvenirs, c’est réconfortant. Feuilleter un
               album ou regarder de vieilles photos permet de revivre de bons
               moments et de se sentir proche de ses proches.
             </p>
-          </span>
         </article>
       </section>
       <section class="section-actions">
         <h1>Santé</h1>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -239,7 +226,6 @@
                 </clipPath>
               </defs>
             </svg>
-          <span class="description_card_content">
             <h2>Boire de l'eau</h2>
             <p>
               Le corps a besoin d’eau pour bien fonctionner. Même si on n’a pas
@@ -247,9 +233,8 @@
               forme et à éviter les coups de fatigue, surtout en période de
               forte chaleur.
             </p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -262,7 +247,6 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
             <h2>Manger son déjeuner</h2>
             <p>
               Un bon repas aide à garder de l’énergie pour le reste de la
@@ -270,10 +254,9 @@
               possible dans une ambiance agréable, fait du bien au corps et au
               moral.
             </p>
-          </span>
         </article>
 
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -286,7 +269,6 @@
                 fill="#00519C"
               />
             </svg>
-          <span class="description_card_content">
             <h2>Prendre ses médicaments (si besoin)</h2>
             <p>
               Ne pas oublier ses traitements, c’est essentiel pour sa santé. Les
@@ -296,7 +278,7 @@
           </span>
         </article>
 
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -313,16 +295,14 @@
                 fill="#005C9A"
               />
             </svg>
-          <span class="description_card_content">
             <h2>Aérer la pièce</h2>
             <p>
               Un peu d’air frais fait du bien. Ouvrir la fenêtre quelques
               minutes aide à mieux respirer et rend l’ambiance plus agréable.
             </p>
-          </span>
         </article>
 
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="101"
               height="101"
@@ -347,32 +327,26 @@
                 </clipPath>
               </defs>
             </svg>
-          <span class="description_card_content">
             <h2>Faire de l'exercice</h2>
             <p>Bougez, remuez, dansez !</p>
-          </span>
         </article>
       </section>
     </main>
 
     <footer>
-      <span class="container">
-        <a href="./index.html" class="logo">
-          <img
-            aria-hidden="true"
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
+      <a href="./index.html" class="logo">
+        <img
+          aria-hidden="true"
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="logo"
+        />
+        <p class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
         </p>
-      </a> 
-      <p>2025 © Kyongsong</p>
-    </span>
-
+      </a>
+    
       <ul class="footer-lien" role="navigation" aria-label="pied de page">
         <li><a href="./matin.html">Le matin</a></li>
         <li><a href="./apres-midi.html">L'après midi</a></li>
@@ -380,6 +354,8 @@
         <li><a href="#">Nous contacter</a></li>
         <li><a href="#">Mentions légales</a></li>
       </ul>
+
+      <p>2025 © Kyongsong</p>
     </footer>
   </body>
 </html>
