--- a/src/html/soir.html
+++ b/src/html/soir.html
@@ -12,53 +12,48 @@
 
   <body>
     <header>
-      <span class="container">
-        <a href="./index.html"  class="logo">
-          <img
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
-        </a>
+      <a href="./index.html"  class="logo">
+        <img
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="logo"
+        />
+        <p class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
+        </p>
+      </a>
 
-        <nav class="nav" aria-label="Navigation principale">
-          <ul>
-            <li><a href="./matin.html">Le matin</a></li>
-            <li><a href="./apres-midi.html">L'après-midi</a></li>
-            <li><a href="./soir.html">Le soir</a></li>
-          </ul>
-        </nav>
-      </span>
+      <nav class="nav" aria-label="Navigation principale">
+        <ul>
+          <li><a href="./matin.html">Le matin</a></li>
+          <li><a href="./apres-midi.html">L'après-midi</a></li>
+          <li><a href="./soir.html">Le soir</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="principal">
       <section class="section-container" aria-labelledby="soir">
-        <span class="section-content">
-            <svg
-              width="100"
-              height="100"
-              viewBox="0 0 100 100"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M50.0185 42.0413C51.6666 42.0413 53.0525 40.5442 53.0525 38.7102V24.7121L52.6031 19.0605L55.3748 22.2419L60.0569 26.9578C60.6186 27.4818 61.3302 27.8186 62.0794 27.8186C63.5777 27.8186 64.6265 26.8081 64.6265 25.3109C64.6265 24.525 64.3642 23.9261 63.7275 23.3273L52.0412 12.4732C51.2547 11.7621 50.6927 11.5 50.0185 11.5C49.3069 11.5 48.7825 11.7621 47.996 12.4732L36.3097 23.3273C35.673 23.9261 35.4107 24.525 35.4107 25.3109C35.4107 26.8081 36.4595 27.8186 37.9578 27.8186C38.6694 27.8186 39.4186 27.4818 39.943 26.9578L44.9994 21.8676L47.3967 19.0605L46.9472 24.7121V38.7102C46.9472 40.5442 48.3706 42.0413 50.0185 42.0413ZM69.3082 52.2966C70.5071 53.4568 72.4925 53.4568 73.8778 52.1095L80.3951 45.597C81.7811 44.2121 81.7436 42.2659 80.5455 41.1055C79.4216 39.908 77.4365 39.8705 76.0503 41.2552L69.5329 47.7678C68.1848 49.1527 68.1473 51.1737 69.3082 52.2966ZM30.6913 52.2966C31.8524 51.1362 31.8524 49.1527 30.4666 47.7678L23.9492 41.2552C22.5634 39.8705 20.6531 39.9453 19.4545 41.1055C18.2559 42.2284 18.2559 44.2121 19.6417 45.597L26.1591 52.1095C27.5451 53.4568 29.5301 53.4943 30.6913 52.2966ZM5.25869 89.5H94.7413C96.5387 89.5 98 88.1527 98 86.4683C98 84.8216 96.5387 83.4742 94.7413 83.4742H66.6116C69.0462 80.1431 70.5071 76.0634 70.5071 71.6094C70.5071 60.381 61.1804 51.0989 50.0185 51.0989C38.8193 51.0989 29.5301 60.381 29.5301 71.6094C29.5301 76.0634 30.9534 80.1431 33.4256 83.4742H5.25869C3.49829 83.4742 2 84.8216 2 86.4683C2 88.1527 3.49829 89.5 5.25869 89.5ZM35.5606 71.6094C35.5606 63.6747 42.0779 57.1622 50.0185 57.1622C57.9593 57.1622 64.4766 63.6747 64.4766 71.6094C64.4766 76.5499 61.9295 80.929 58.0717 83.4742H41.9281C38.1077 80.929 35.5606 76.5499 35.5606 71.6094ZM10.1279 73.7054H19.3421C21.2898 73.7054 22.7506 72.3206 22.7132 70.6737C22.6757 68.9895 21.2898 67.6047 19.3421 67.6047H10.1279C8.18017 67.6047 6.79434 68.9895 6.79434 70.6737C6.79434 72.3206 8.18017 73.7054 10.1279 73.7054ZM80.695 73.7054H89.9094C91.8195 73.7054 93.2425 72.3206 93.2425 70.6737C93.2425 68.9895 91.8195 67.6047 89.9094 67.6047H80.695C78.7474 67.6047 77.2868 68.9895 77.3243 70.6737C77.3612 72.3206 78.7474 73.7054 80.695 73.7054Z"
-                fill="#ffffff"
-              />
-            </svg>
-          <h1 class="section-title" aria-label="Le rituel du soir">Le soir</h1>
-          <p class="section-text">
-            La routine du soir, pour bien recharger ses batteries !
-          </p>
-        </span>
+        <svg
+          width="100"
+          height="100"
+          viewBox="0 0 100 100"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M50.0185 42.0413C51.6666 42.0413 53.0525 40.5442 53.0525 38.7102V24.7121L52.6031 19.0605L55.3748 22.2419L60.0569 26.9578C60.6186 27.4818 61.3302 27.8186 62.0794 27.8186C63.5777 27.8186 64.6265 26.8081 64.6265 25.3109C64.6265 24.525 64.3642 23.9261 63.7275 23.3273L52.0412 12.4732C51.2547 11.7621 50.6927 11.5 50.0185 11.5C49.3069 11.5 48.7825 11.7621 47.996 12.4732L36.3097 23.3273C35.673 23.9261 35.4107 24.525 35.4107 25.3109C35.4107 26.8081 36.4595 27.8186 37.9578 27.8186C38.6694 27.8186 39.4186 27.4818 39.943 26.9578L44.9994 21.8676L47.3967 19.0605L46.9472 24.7121V38.7102C46.9472 40.5442 48.3706 42.0413 50.0185 42.0413ZM69.3082 52.2966C70.5071 53.4568 72.4925 53.4568 73.8778 52.1095L80.3951 45.597C81.7811 44.2121 81.7436 42.2659 80.5455 41.1055C79.4216 39.908 77.4365 39.8705 76.0503 41.2552L69.5329 47.7678C68.1848 49.1527 68.1473 51.1737 69.3082 52.2966ZM30.6913 52.2966C31.8524 51.1362 31.8524 49.1527 30.4666 47.7678L23.9492 41.2552C22.5634 39.8705 20.6531 39.9453 19.4545 41.1055C18.2559 42.2284 18.2559 44.2121 19.6417 45.597L26.1591 52.1095C27.5451 53.4568 29.5301 53.4943 30.6913 52.2966ZM5.25869 89.5H94.7413C96.5387 89.5 98 88.1527 98 86.4683C98 84.8216 96.5387 83.4742 94.7413 83.4742H66.6116C69.0462 80.1431 70.5071 76.0634 70.5071 71.6094C70.5071 60.381 61.1804 51.0989 50.0185 51.0989C38.8193 51.0989 29.5301 60.381 29.5301 71.6094C29.5301 76.0634 30.9534 80.1431 33.4256 83.4742H5.25869C3.49829 83.4742 2 84.8216 2 86.4683C2 88.1527 3.49829 89.5 5.25869 89.5ZM35.5606 71.6094C35.5606 63.6747 42.0779 57.1622 50.0185 57.1622C57.9593 57.1622 64.4766 63.6747 64.4766 71.6094C64.4766 76.5499 61.9295 80.929 58.0717 83.4742H41.9281C38.1077 80.929 35.5606 76.5499 35.5606 71.6094ZM10.1279 73.7054H19.3421C21.2898 73.7054 22.7506 72.3206 22.7132 70.6737C22.6757 68.9895 21.2898 67.6047 19.3421 67.6047H10.1279C8.18017 67.6047 6.79434 68.9895 6.79434 70.6737C6.79434 72.3206 8.18017 73.7054 10.1279 73.7054ZM80.695 73.7054H89.9094C91.8195 73.7054 93.2425 72.3206 93.2425 70.6737C93.2425 68.9895 91.8195 67.6047 89.9094 67.6047H80.695C78.7474 67.6047 77.2868 68.9895 77.3243 70.6737C77.3612 72.3206 78.7474 73.7054 80.695 73.7054Z"
+            fill="#ffffff"
+          />
+        </svg>
+        <h2 class="section-title" aria-label="Le rituel du soir">Le soir</h2>
+        <p class="section-text">
+          La routine du soir, pour bien recharger ses batteries !
+        </p>
       </section>
       <section class="section-actions">
-        <h2>Santé</h2>
-        <article class="description_card_border">
+        <h1>Santé</h1>
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -71,12 +66,10 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
-            <h1>Se reposer</h1>
+            <h2>Se reposer</h2>
             <p>S'assoir sur le canapé, s'assoir sur son balcon ou terrasse.</p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -89,15 +82,13 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
-            <h1>Dîner</h1>
+            <h2>Dîner</h2>
             <p>
               Pensez à manger équilibré : légumes, fruits et poisson pour le
               soir.
             </p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -122,13 +113,11 @@
                 </clipPath>
               </defs>
             </svg>
-          <span class="description_card_content">
-            <h1>Boire de l'eau</h1>
+            <h2>Boire de l'eau</h2>
             <p>Bien s'hydrater et boir 1,5 litre d'eau</p>
-          </span>
         </article>
 
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -161,18 +150,16 @@
                 </clipPath>
               </defs>
             </svg>
-          <span class="description_card_content">
-            <h1>Se brosser les dents</h1>
+            <h2>Se brosser les dents</h2>
             <p>
               À l'aide du dentifrice qui sera déposé sur la brosse à dent,
               pensez à frotter de haut en bas puis rincez à l'eau claire.
             </p>
-          </span>
         </article>
       </section>
       <section class="section-actions">
-        <h2>Avant de se coucher</h2>
-        <article class="description_card_border">
+        <h1>Avant de se coucher</h1>
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -197,15 +184,13 @@
                 </clipPath>
               </defs>
             </svg>
-          <span class="description_card_content">
-            <h1>Vérouiller les portes et fenêtres</h1>
+            <h2>Vérouiller les portes et fenêtres</h2>
             <p>
               Pensez à vérifier que la clé et bien dans la porte et fermée à
               double tours, que les fenêtres sont aussi fermées.
             </p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -219,14 +204,14 @@
               />
             </svg>
           <span class="description_card_content">
-            <h1>Éteindre les appareils électriques et le gaz</h1>
+            <h2>Éteindre les appareils électriques et le gaz</h2>
             <p>
               Pensez à éteindre les plaques de cuisson ou coupez le gaz si
               besoin.
             </p>
           </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -239,12 +224,10 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
-            <h1>Allumer la veilleuse</h1>
+            <h2>Allumer la veilleuse</h2>
             <p>Mettre une lumière tamisée pour se préparer au sommeil.</p>
-          </span>
         </article>
-        <article class="description_card_border">
+        <article class="advice">
             <svg
               width="100"
               height="100"
@@ -269,35 +252,29 @@
                 fill="#005A9C"
               />
             </svg>
-          <span class="description_card_content">
-            <h1>Préparer un réveil</h1>
+            <h2>Préparer un réveil</h2>
             <p>
               Pensez à programmer une sonnerie pour vous réveiller avant 9h, si
               nécessaire.
             </p>
-          </span>
         </article>
       </section>
     </main>
 
     <footer>
-      <span class="container">
-        <a href="./index.html" class="logo">
-          <img
-            aria-hidden="true"
-            class="logo-icon"
-            src="../assets/svg/hand-holding-heart-solid.svg"
-            alt="logo"
-          />
-          <p class="site-name">
-            <span class="site-title">Mon Petit</span>
-            <span class="site-subtitle">Geste</span>
-          </p>
+      <a href="./index.html" class="logo">
+        <img
+          aria-hidden="true"
+          class="logo-icon"
+          src="../assets/svg/hand-holding-heart-solid.svg"
+          alt="logo"
+        />
+        <p class="site-name">
+          <span class="site-title">Mon Petit</span>
+          <strong class="site-subtitle">Geste</strong>
         </p>
-      </a> 
-      <p>2025 © Kyongsong</p>
-    </span>
-
+      </a>
+    
       <ul class="footer-lien" role="navigation" aria-label="pied de page">
         <li><a href="./matin.html">Le matin</a></li>
         <li><a href="./apres-midi.html">L'après midi</a></li>
@@ -305,6 +282,8 @@
         <li><a href="#">Nous contacter</a></li>
         <li><a href="#">Mentions légales</a></li>
       </ul>
+
+      <p>2025 © Kyongsong</p>
     </footer>
   </body>
 </html>
