--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,13 +11,22 @@
 
 <body>
   <header class="site-header">
-    <a href="./index.html">
+
+    <a href="./index.html" class="branding">
       <img class="logo-icon" src="../assets/svg/hand-holding-heart-solid.svg" alt="logo" />
       <p class="site-name">
         <span class="site-title">Mon Petit</span>
-        <span class="site-subtitle">Geste</span>
+        <span class="site-subtitle"><strong>Geste</strong></span>
       </p>
     </a>
+
+    <nav class="nav" id="main-nav" role="navigation" aria-label="Menu principal">
+      <ul>
+        <li><a href="./matin.html">Le matin</a></li>
+        <li><a href="./apres-midi.html">L'après-midi</a></li>
+        <li><a href="./soir.html">Le soir</a></li>
+      </ul>
+    </nav>
 
     <button class="menu-toggle" aria-expanded="false" aria-controls="main-nav" aria-label="Ouvrir le menu">
       <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -27,13 +36,6 @@
       </svg>
     </button>
 
-    <nav class="nav" id="main-nav" role="navigation" aria-label="Menu principal">
-      <ul>
-        <li><a href="./matin.html">Le matin</a></li>
-        <li><a href="./apres-midi.html">L'après-midi</a></li>
-        <li><a href="./soir.html">Le soir</a></li>
-      </ul>
-    </nav>
   </header>
 
   <main>
