--- a/src/html/apres-midi.html
+++ b/src/html/apres-midi.html
@@ -16,12 +16,12 @@
         <img
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="logo"
+          alt="Logo de mon petit geste, main qui tien un coeur"
         />
-        <p class="site-name">
+        <h2 class="site-name">
           <span class="site-title">Mon Petit</span>
           <strong class="site-subtitle">Geste</strong>
-        </p>
+        </h2>
       </a>
 
       <nav class="nav" aria-label="Navigation principale">
@@ -34,7 +34,7 @@
     </header>
 
     <main class="principal">
-      <section class="section-container" aria-labelledby="matin">
+      <section class="section-container" aria-labelledby="apres_midi">
           <svg
             width="101"
             height="101"
@@ -95,7 +95,7 @@
               stroke-linecap="round"
             />
           </svg>
-        <h2 class="section-title" aria-label="Le rituel d'après-midi">
+        <h2 class="section-title" aria-label="Le rituel d'après-midi" id="apres_midi">
           L'après-midi
         </h2>
         <p class="section-text">
@@ -339,20 +339,20 @@
           aria-hidden="true"
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="logo"
+          alt="Logo de mon petit geste, main qui tien un coeur"
         />
-        <p class="site-name">
+        <h2 class="site-name">
           <span class="site-title">Mon Petit</span>
           <strong class="site-subtitle">Geste</strong>
-        </p>
+        </h2>
       </a>
     
       <ul class="footer-lien" role="navigation" aria-label="pied de page">
         <li><a href="./matin.html">Le matin</a></li>
         <li><a href="./apres-midi.html">L'après midi</a></li>
         <li><a href="./soir.html">Le soir</a></li>
-        <li><a href="#">Nous contacter</a></li>
-        <li><a href="#">Mentions légales</a></li>
+        <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
+        <li><a href="./mentions-legales.html" >Mentions légales</a></li>
       </ul>
 
       <p>2025 © Kyongsong</p>
