--- a/src/html/soir.html
+++ b/src/html/soir.html
@@ -16,12 +16,12 @@
         <img
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="logo"
+          alt="Logo de mon petit geste, main qui tien un coeur"
         />
-        <p class="site-name">
+        <h2 class="site-name">
           <span class="site-title">Mon Petit</span>
           <strong class="site-subtitle">Geste</strong>
-        </p>
+        </h2>
       </a>
 
       <nav class="nav" aria-label="Navigation principale">
@@ -46,7 +46,7 @@
             fill="#ffffff"
           />
         </svg>
-        <h2 class="section-title" aria-label="Le rituel du soir">Le soir</h2>
+        <h2 class="section-title" aria-label="Le rituel du soir" id="soir">Le soir</h2>
         <p class="section-text">
           La routine du soir, pour bien recharger ses batteries !
         </p>
@@ -267,20 +267,20 @@
           aria-hidden="true"
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt="logo"
+          alt="Logo de mon petit geste, main qui tien un coeur"
         />
-        <p class="site-name">
+        <h2 class="site-name">
           <span class="site-title">Mon Petit</span>
           <strong class="site-subtitle">Geste</strong>
-        </p>
+        </h2>
       </a>
     
       <ul class="footer-lien" role="navigation" aria-label="pied de page">
         <li><a href="./matin.html">Le matin</a></li>
         <li><a href="./apres-midi.html">L'après midi</a></li>
         <li><a href="./soir.html">Le soir</a></li>
-        <li><a href="#">Nous contacter</a></li>
-        <li><a href="#">Mentions légales</a></li>
+        <li><a href="mailto:contact@kyongsong.fr">Nous contacter</a></li>
+        <li><a href="./mentions-legales.html" >Mentions légales</a></li>
       </ul>
 
       <p>2025 © Kyongsong</p>
