--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
         <img
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt=""
+          alt="Logo de mon Petit Geste"
           role="presentation"
         />
       </a>
@@ -152,7 +152,7 @@
         <img
           class="logo-icon"
           src="../assets/svg/hand-holding-heart-solid.svg"
-          alt=""
+          alt="Logo de mon Petit Geste"
           role="presentation"
         />
       </a>
